# vk-test

./: CMakeLists.txt  README.md
src/: main.cpp
